<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/input_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_hint" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_bubble_sort"
            android:layout_width="181dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_bubble" />

        <RadioButton
            android:id="@+id/radio_insertion_sort"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_insert" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_sort_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/start_view_text"
        android:textColor="@android:color/black"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sort_button" />

</LinearLayout>
